Fix z-index values for video and h1 elements to ensure proper layering

--- a/style.css
+++ b/style.css
@@ -33,13 +33,15 @@ video {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    z-index: -1;
+    z-index: 1;
 }
 
 h1 {
     font-size: 2rem;
     font-weight: bold;
     cursor: pointer;
+    position: relative;
+    z-index: 9;
 
     /* background-image: url(./text\ bg.gif);
     background-size: cover;
